fix: savers count not showing under certain widths
Adjusts CSS media query for the savers div so it only disappears on
`large` screen sizes.

issue: https://todo.sr.ht/~mlb/linkhut/38

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1090,7 +1090,7 @@ div.bookmark {
             color: $muted-dark;
         }
 
-        @media #{$not-small} {
+        @media #{$large} {
             display: none;
         }
     }
